Fix the alignment

--- a/css/main.css
+++ b/css/main.css
@@ -25,12 +25,8 @@ header {
   background-color: #e2e2e2;
 }
 
-header h1 {
+.nav li {
   display: inline-block;
-  text-align: center;
-}
-
-nav li {
   list-style-type: none;
 }
 
@@ -39,15 +35,13 @@ nav li {
   padding: 0;
 }
 
-nav a {
+.nav a {
   color: #0074d9;
-  padding: 1rem;
-  text-align: center;
+  display: block;
   text-decoration: none;
 }
 
-nav a:hover {
+.nav a:hover {
   background-color: #0074d9;
   color: #fff;
-  font-weight: bold;
 }
